--- a/spa-badge.html
+++ b/spa-badge.html
@@ -2,7 +2,8 @@
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <script src="js/miniQuery.js"></script>
-  <script src="handlebars-v4.0.5.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.js"></script>
   <script src="js/app.js"></script>
   <title>SPABadge</title>
 </head>
@@ -12,6 +13,8 @@
     <li>{{this.name}}</li>
   {{/each}}
 </script>
+
+
 
 <body>
   <div class="container">
